--- a/Student_Projects/Project.ipynb
+++ b/Student_Projects/Project.ipynb
@@ -4,7 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-<<<<<<< HEAD
     "# Empty Student Project"
    ]
   },
@@ -33,8 +32,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
-=======
-    "# Empty Student Project\n",
-   ]
->>>>>>> e94f5c209ec7b292282329e12e4a70d87fd06629
   }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
