--- a/02_Introduction_to_Programming.ipynb
+++ b/02_Introduction_to_Programming.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Table of contents\n",
-    "**!¡!¡ Missing** ghghghghghghgh"
+    "**!¡!¡ Missing** Hi this is ee xuan"
    ]
   },
   {
