--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -61,7 +61,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -109,9 +108,8 @@
     "\n",
     "**Some Commands:**\n",
     "\n",
-    "<a href=\"https://ibb.co/ea0uaf\"><img src=\"https://preview.ibb.co/cnyQgL/Whats-App-Image-2018-10-142-at-19-48-34.jpg\" alt=\"Whats-App-Image-2018-10-142-at-19-48-34\" border=\"0\"></a>\n",
-    "\n",
-    "<a href=\"https://ibb.co/nAMBML\"><img src=\"https://preview.ibb.co/b7mNT0/Whats-App-Image-2018-10-14-at-19-48-34.jpg\" alt=\"Whats-App-Image-2018-10-14-at-19-48-34\" border=\"0\"></a>\n",
+    "![img1](/imgs/pic1.jpeg)\n",
+    "![img2](/imgs/pic2.jpeg)\n",
     "\n",
     "\n",
     "#4. An Introduction to Git and Github (Summarised)\n",
@@ -157,7 +155,7 @@
     "\n",
     "- NO: then sign up by creating a password and entering your email address.\n",
     "\n",
-    "<a href=\"https://ibb.co/mEd2T0\"><img src=\"https://preview.ibb.co/d7WNT0/Screen-Shot-2018-10-05-at-09-01-00.png\" alt=\"Screen-Shot-2018-10-05-at-09-01-00\" border=\"0\"></a>\n",
+    "![pic3](/imgs/pic3.png)\n",
     "\n",
     "\n",
     "\n",
@@ -489,7 +487,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -500,10 +497,9 @@
     "Markdown serves as the main text formating language for Jupyter Notebooks. Markdown is spacing and case sensitive. For instance, this means that when a user types `mycode` and `myCode`, the program recognises them as two different variables. The same goes for spacing - `mycode` and `my code` would be registered as two sepaprate variables. Markdown is very similar to HTML, as it is designed to be easily converted to HTML. The following is a list of 15 useful Markdown commands and how they appear in when the Markdown code is run.\n",
     "\n",
     "**Some Commands:**\n",
+    "![img1](/imgs/pic1.jpeg)\n",
+    "![img2](/imgs/pic2.jpeg)\n",
     "\n",
-    "<a href=\"https://ibb.co/ea0uaf\"><img src=\"https://preview.ibb.co/cnyQgL/Whats-App-Image-2018-10-142-at-19-48-34.jpg\" alt=\"Whats-App-Image-2018-10-142-at-19-48-34\" border=\"0\"></a>\n",
-    "\n",
-    "<a href=\"https://ibb.co/nAMBML\"><img src=\"https://preview.ibb.co/b7mNT0/Whats-App-Image-2018-10-14-at-19-48-34.jpg\" alt=\"Whats-App-Image-2018-10-14-at-19-48-34\" border=\"0\"></a>\n",
     "\n",
     "\n",
     "  \n",
@@ -682,7 +678,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -711,7 +706,7 @@
     "1. Write a short description.\n",
     "1. Select **Initialize this repository with a *README***.\n",
     "\n",
-    "<a href=\"https://ibb.co/hGJfFf\"><img src=\"https://preview.ibb.co/iAJQgL/Screen-Shot-2018-10-15-at-23-02-50.png\" alt=\"Screen-Shot-2018-10-15-at-23-02-50\" border=\"0\"></a>\n",
+    "![imgs4](/imgs/ss50.png)\n",
     "\n",
     "\n",
     "Click **Create repository** 🎉\n",
@@ -735,7 +730,7 @@
     "- A new branch called feature (because we’re doing ‘feature work’ on this branch)\n",
     "- The journey that feature takes before it’s merged into master\n",
     "\n",
-    "<a href=\"https://ibb.co/h727vf\"><img src=\"https://preview.ibb.co/crgd1L/Screen-Shot-2018-10-15-at-23-03-06.png\" alt=\"Screen-Shot-2018-10-15-at-23-03-06\" border=\"0\"></a>\n",
+    "![img5](/imgs/ss06.png)\n",
     "\n",
     "\n",
     "Have you ever saved different versions of a file? For instance:\n",
@@ -756,7 +751,7 @@
     "1. Type a branch name, readme-edits, into the new branch text box.\n",
     "1. Select the blue **Create branch box** or hit ``“Enter”`` on your keyboard.\n",
     "\n",
-    "<a href=\"https://ibb.co/cYBZaf\"><img src=\"https://preview.ibb.co/k8RNT0/Screen-Shot-2018-10-15-at-23-05-11.png\" alt=\"Screen-Shot-2018-10-15-at-23-05-11\" border=\"0\"></a>\n",
+    "![img6](/imgs/ss11.png)\n",
     "\n",
     "Now you have two branches, master and readme-edits. They look exactly the same, but not for long! Next we’ll add our changes to the new branch.\n",
     "\n",
@@ -774,7 +769,7 @@
     "1. Write a commit message that describes your changes.\n",
     "1. Click **Commit changes** button.\n",
     "\n",
-    "<a href=\"https://ibb.co/fHmNT0\"><img src=\"https://preview.ibb.co/j8FGo0/Screen-Shot-2018-10-15-at-23-05-26.png\" alt=\"Screen-Shot-2018-10-15-at-23-05-26\" border=\"0\"></a>\n",
+    "![img7](/imgs/ss26.png)\n",
     "\n",
     "These changes will be made to just the *README* file on your readme-editsbranch, so now this branch contains content that’s different from master.\n",
     "\n",
@@ -793,9 +788,9 @@
     "\n",
     "**Open a Pull Request for changes to the README** \n",
     "\n",
-    "<a href=\"https://ibb.co/nznkgL\"><img src=\"https://preview.ibb.co/cpDfFf/Screen-Shot-2018-10-15-at-23-09-25.png\" alt=\"Screen-Shot-2018-10-15-at-23-09-25\" border=\"0\"></a>\n",
+    "![img8](/imgs/ss25.png)\n",
     "\n",
-    "<a href=\"https://ibb.co/eenkgL\"><img src=\"https://preview.ibb.co/fBNJ1L/Screen-Shot-2018-10-15-at-23-09-43.png\" alt=\"Screen-Shot-2018-10-15-at-23-09-43\" border=\"0\"></a>\n",
+    "![img9](/imgs/ss43.png)\n",
     "\n",
     "**Step** | **Screenshot**\n",
     "-------------------------------|\n",
@@ -817,16 +812,10 @@
     "1. Click **Confirm merge**.\n",
     "1. Go ahead and delete the branch, since its changes have been incorporated, with the **Delete branch** button in the purple box.\n",
     "\n",
-    "<a href=\"https://ibb.co/kMn7vf\"><img src=\"https://preview.ibb.co/iAckgL/Screen-Shot-2018-10-15-at-23-10-07.png\" alt=\"Screen-Shot-2018-10-15-at-23-10-07\" border=\"0\"></a>\n",
+    "![img10](/imgs/ss07.png)\n",
     "\n",
     "\n",
-    "Now that you have all the basic tools to start coding and collaborating on projects with others the next steps are to google and watch tutorials on how to build applications, good luck!\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "Now that you have all the basic tools to start coding and collaborating on projects with others the next steps are to google and watch tutorials on how to build applications, good luck!"
    ]
   },
   {
