--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -190,7 +190,10 @@
     " ## Other Recources\n",
     "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help eachother. Some of these platfomrs include [**Stackoverflow**](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn).\n",
     "\n",
-    "<img src=\"https://media.wired.com/photos/5926db217034dc5f91becd6b/master/w_1164,c_limit/so-logo-s.jpg\"  width = \"100\"> <img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> <img src=\" https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\"><img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
+    "<img src=\"https://media.wired.com/photos/5926db217034dc5f91becd6b/master/w_1164,c_limit/so-logo-s.jpg\" width = \"100\"> \n",
+    "<img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> \n",
+    "<img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\">\n",
+    "<img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
     "  \n",
     "  \n",
     "  \n",
@@ -389,7 +392,7 @@
     "\n",
     "Similar to Visual Studio Code, Atom is an sleek editor built on Electron which was originally purposed for application design. The IDE was created by Github and has a large community around it. It supports Javascript, HTML, and CSS. However,  Python must be run on an extension. One major advantage of Atom is its ability to incorporate packages from Github such as Hydrogen. Hydrogen enables it users to run select snippets of code within the editor itself, as is seen in the GIF below.\n",
     "\n",
-    "![Atom IDE](https://s3.amazonaws.com/assets.datacamp.com/blog_assets/atom-hydrogen.gif)\n",
+    "![Atom IDE](https://i.github-camo.com/9648f8f84f3eda65fd542c13d0a355e4b0cffd2c/68747470733a2f2f7261772e67697468756275736572636f6e74656e742e636f6d2f666c6f77747970652f6964652d666c6f77747970652f6d61737465722f7265736f75726365732f6175746f636f6d706c6574652e676966)\n",
     "\n",
     "### **Repl.it:**\n",
     "Available at: [https://repl.it/](https://repl.it/)\n",
@@ -506,7 +509,10 @@
     " ## Other Recources\n",
     "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help one another out. Some of these platforms include [**Stackoverflow**](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn).\n",
     "\n",
-    "<img src=\"https://media.wired.com/photos/5926db217034dc5f91becd6b/master/w_1164,c_limit/so-logo-s.jpg\"  width = \"100\"> <img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> <img src=\" https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\"><img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
+    "<img src=\"https://media.wired.com/photos/5926db217034dc5f91becd6b/master/w_1164,c_limit/so-logo-s.jpg\" width = \"100\"> \n",
+    "<img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> \n",
+    "<img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\">\n",
+    "<img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
     "  \n",
     "  \n",
     "  \n",
