--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -467,13 +467,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "GnVsy3OMY3iW"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Hello World!\")"
    ]
@@ -513,8 +521,8 @@
     "<img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> \n",
     "<img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\">\n",
     "<img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
-    "  \n",
-    "  \n",
+    "\n",
+    "<img src=\"/imgs/so.jpg\" width = \"100\"><img src=\"/imgs/solo.png\" width = \"80\"><img src=\"/imgs/code.png\" width = \"300\"><img src=\"/imgs/reddit.png\" width = \"80\">\n",
     "  \n",
     "\n",
     "\n",
