last image changes

--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -518,10 +518,10 @@
     "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help one another out. Some of these platforms include [**Stackoverflow**](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn).\n",
     "\n",
     "\n",
-    "<img src=\"/imgs/so.jpg\" width = \"100\">\n",
-    "<img src=\"/imgs/solo.png\" width = \"80\">\n",
-    "<img src=\"/imgs/code.png\" width = \"300\">\n",
-    "<img src=\"/imgs/reddit.png\" width = \"80\">\n",
+    "![lpgo](/imgs/so.jpg)\n",
+    "![ligo](/imgs/solo.png)\n",
+    "![gigo](/imgs/code.png)\n",
+    "![loga](/imgs/reddit.png)\n",
     "  \n",
     "\n",
     "\n",
