--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -190,7 +190,7 @@
     " ## Other Recources\n",
     "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help eachother. Some of these platfomrs include [**Stackoverflow**](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn).\n",
     "\n",
-    "<img src=\"https://media.wired.com/photos/5926db217034dc5f91becd6b/master/w_1164,c_limit/so-logo-s.jpg\"  width = \"100\"> <img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> <img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\"><img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
+    "<img src=\"https://i0.wp.com/wptavern.com/wp-content/uploads/2016/07/stack-overflow.png?w=1254&ssl=1\"  width = \"100\"> <img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> <img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\"><img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
     "  \n",
     "  \n",
     "  \n",
@@ -514,27 +514,14 @@
     " ## Other Recources\n",
     "When you begin coding you will inevitably run into challenges. Thankfully there are many online communities and  platforms where coders come together to help one another out. Some of these platforms include [**Stackoverflow**](https://stackoverflow.com) or subreddits like [r/programming](https://www.reddit.com/r/programming/) and [r/pyhton](https://www.reddit.com/r/Python/) on Reddit. Additionally, there are several free online recources to help you to enhance your coding skills, such as [MIT OpenCourseware](https://ocw.mit.edu/index.htm), [SoloLearn](https://www.sololearn.com), and [Codecademy](https://www.codecademy.com/learn).\n",
     "\n",
-    "\n",
-    "<img src=\"https://media.wired.com/photos/5926db217034dc5f91becd6b/master/w_1164,c_limit/so-logo-s.jpg\"  width = \"100\"> <img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> <img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\"><img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
+    "<img src=\"https://i0.wp.com/wptavern.com/wp-content/uploads/2016/07/stack-overflow.png?w=1254&ssl=1\"  width = \"100\"> <img src=\"https://cdn-images-1.medium.com/max/280/1*QNimSWsBQxta_xt3XksQaw@2x.png\" width=\"80\"> <img src=\"https://www.codecademy.com/webpack/44e01805165bfde4e6e4322c540abf81.svg\" width=\"300\"><img src=\"https://vignette.wikia.nocookie.net/sdorica/images/5/55/Reddit-icon.png/revision/latest/scale-to-width-down/480?cb=20180627162002\" width=\"80\">\n",
     "\n",
     "\n",
     "  ### Stackoverflow \n",
     "Originally created in 2008, Stackoverflow is a forum for a broad range of programming topics. Typically, it is highly likely that someone has already asked a similar question  to yours, and since then has been answered. If not, you may post your queries here and have it answered in no time. According to a paper published by  [UC Berkley](https://people.eecs.berkeley.edu/~bjoern/projects/stackoverflow/#), 92% of questions posted on Stackoverflow were answered with a median time of around 11 minutes! Based on how useful an answer, you can either rate a user's response \"up\" or \"down\", ensuring that the best answers are displayed first. \n",
     "  \n",
     "For more information on [how to use](https://stackoverflow.com/tour) Stackoverflow follow this link!\n",
-    " \n",
-    " \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  \n",
-    "  "
+    " "
    ]
   },
   {
