Path for first image fixed.

--- a/01_Preliminaries.ipynb
+++ b/01_Preliminaries.ipynb
@@ -40,7 +40,7 @@
     "If you are new to programming, we would suggest you keep reading on from here (the simple version). If you already have the basic programming set up jump to the second part named extended version. We begin by introducing the elements you need and then start with getting all set up accompanied with an explanation why you need it. Python, Jupyter Notebook and Github are names that will be familier to you after this tutorial.\n",
     "\n",
     "## Introduction to the Command Line\n",
-    "![Terminal](imgs/01_terminal_prompt.png)\n",
+    "![Terminal](/imgs/01_terminal_prompt.png)\n",
     "\n",
     "The command line serves as an essential user interface which is navigated by text commands (prompts) rather than a mouse. It is possible to carry out all operations which often cannot be acessed through your normal GUI (Graphical User Interface). On Windows machines it is known as the **Command Prompt** and on Mac OsX & Linux operating systems it is known as **Terminal**. When begining to code it is essential to understand some basic commands in order to utilize the command line. Bellow is a table of essential commands with a brief explanation of how to use them.\n",
     "\n",
