--- a/06_Object_Oriented_Programming.ipynb
+++ b/06_Object_Oriented_Programming.ipynb
@@ -4,119 +4,58 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of contents\n",
-    "**!¡!¡ Missing**"
+    "# Table of Contents\n",
+    "1. [Programming Paradigms](#program_paradigms)\n",
+    "2. [Object-Oriented Programming](#oop)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Objects in Programming\n",
-    "1.1 General Definition\n",
-    "    \n",
-    "Objects in computer science can be variables, functions, data structures or anything else which *is a location in memory and has a value assigned to it, which can be called upon with a command*.\n",
-    "    \n",
-    "1.2 Objects in Python\n",
-    "    \n",
-    "Python is an [object oriented programming language](https://en.wikipedia.org/wiki/Object-oriented_programming). Object oriented programming is a design praxis to refer to reusable modules and systems. Object oriented programming languages try to integrate *code* and *data* into a so-called **object**. An object is an abstract concept with a **behaviour** (code) and a **state** (data). A practical example of an object would be the tab \"shoes\" on Zalando. In addition to objects, Python assigns classes and subclasses to objects. Classes and its subclasses assign hierarchical order to behaviours and states. Some plausible subclasses for the \"shoes\" object on Zalando might be \"sports shoes\", \"sneakers\" or \"hiking boots\". It is possible to define your own classes and subclasses, however, for entry level Python this will likely not be needed. If you want to find out how to play around with classes, click [here](https://en.wikibooks.org/wiki/A_Beginner%27s_Python_Tutorial/Classes), if you are more interested in the theoretical background of object oriented Python, click [here](https://docs.python.org/2/tutorial/classes.html) for the official Python.org documentation.\n",
+    "<a id=\"program_paradigms\"></a>\n",
+    "# Programming Paradigms\n",
     "\n",
-    "\n",
-    "# Lists\n",
-    "\n",
-    "In Python, a list is a very flexible data structure which has a wide range of built-in functions to your use. A list's two most important properties are that their elements are both *changeable* and in *ordered sequences*. You can spot lists by their **[square brackets]**. Lists are a great tool for when you work with many values, want to track a certain value's development or if you want to perform the same operation on a large number of different values. Defining an empty list in Python is really simple.\n",
+    "1.1 What is a programming paradigm? \n",
     "    \n",
-    "<code>sample_list = []</code>\n",
-    "    \n",
-    "Different elements in lists are separated by commas:\n",
-    "    \n",
-    "<code>sample_list = [1, 2, 3]</code>\n",
-    "    \n",
-    "Some commands to work with lists are listed below:\n",
-    "    \n",
-    "<code>sample_list.append(x)</code>  Adds an item to the end of the list.\n",
-    "     \n",
-    "<code>sample_list.insert(i, x)</code>  Insert an item at a given position. The first argument is the index of the element *before which to insert*, the second argument is the element. \n",
-    "     \n",
-    "<code>sample_list.count(x)</code>  Counts the number of times that *x* appears in the list.\n",
-    "     \n",
-    "Note that the syntax always follows the same principles:\n",
-    "     \n",
-    "<code>listname.command(argument(s))</code>\n",
-    "     \n",
-    "A more detailed list of commands can be found [here](https://docs.python.org/3/tutorial/datastructures.html). For a more intuitive guide to Python's list function, consult this [blogpost](https://www.digitalocean.com/community/tutorials/understanding-lists-in-python-3).\n",
-    "     \n",
-    "## Sets\n",
-    "\n",
-    "A concept closely related to lists are sets. Sets have two striking differences to lists in Python: First, they consist of **unique elements** and are an **unordered** sequence. As it is unordered, sets do not support indexing, slicing or other ordered-sequence operation. Its uses are found in the removal of duplicates or similar. For more on sets, refer to the [Python Library](https://docs.python.org/2/library/sets.html).\n",
-    "    \n",
-    "\n",
-    "# Formatting the <code>print</code> outputs\n",
-    "    \n",
-    "Next, we will cover how to change the way the <code>print</code> command displays elements on your output. Namely, we are interested in font colour, as well as how to do bold statements. Interestingly, *italic* output is not supported by standard Python. Arnau used the following line in his [Three Queens Code](https://fronter.com/unisg/links/link.phtml?idesc=1&iid=1078955) (version 4):\n",
-    "    \n",
-    "<code>print('\\033[1;31mYour final balance is {:.3f} CHF\\033[1;31m'.format(money))</code>\n",
-    "\n",
-    "To call the graphics function, you start by typing this argument <code>\\033[</code>. The next value you enter specifies the *text attributes*. After separating with a semicolon <code>;</code>, the next value specifies the *colour*. After the colour code, you end the argument with a lowercase <code>m</code>. Note that this function remains active until the next occurence of the sequence, hence Arnau putting it at the end of the <code>print</code> statement again. Let's start with a list of some useful text attributes:\n",
-    "    \n",
-    "<code>0 = All attributes off\n",
-    "1 = Bold on\n",
-    "4 = Underscore on (not always supported)</code>\n",
-    "    \n",
-    "Our sample argument if we want to print in bold now looks like this:\n",
-    "    \n",
-    "<code>\\033[1;</code> \n",
-    "    \n",
-    "Now, let's list some colours, given by double-digit arguments:\n",
-    "    \n",
-    "<code>30 = Black\n",
-    "31 = Red\n",
-    "32 = Green\n",
-    "33 = Yellow\n",
-    "34 = Blue\n",
-    "35 = Magenta\n",
-    "36 = Cyan\n",
-    "37 = White</code>\n",
-    "    \n",
-    "A sample statement could be:\n",
-    "    \n",
-    "<code>print('\\033[1;36mThis string is bold and Cyan\\033[1;36m')</code>\n",
+    "A programming paradigm is a way of classifying a programming language based on its features, particularly the way in which its code is organized. \n",
     "        \n",
-    "Arnau also uses another handy feature in his <code>print</code> command:\n",
-    "    \n",
-    "<code>print('\\033[1;31mYour final balance is {:.3f} CHF\\033[1;31m'.format(money))</code>\n",
-    "    \n",
-    "Notice the <code>{:.3f}</code>. Since our Three Queens code will possibly spit out very small floats with a lot of decimals, Arnau implements this instead of the usual <code>{}</code> to display exactly three decimals. Intuitively, the integer in the expression specifies the number of decimals. A sample code that makes use of this could be:\n",
+    "The major existing programming paradigms are: \n",
+    "1. [Imperative](#imperative)\n",
+    "2. [Logical](#logical)\n",
+    "3. [Functional](#functional)\n",
+    "4. [Object-Oriented](#oop)\n",
     "\n",
-    "<code>1: n = 12.124436457\n",
-    "2: print(f'look at this nice rounding {n:.4f}')\n",
-    "</code>\n",
+    "<a id=\"imperative\"></a>\n",
+    "**Imperative programming** is a programming paradigm which consists of providing of commands in a sequential order for a computer to execute. In other words, it is a simple list of instructions. The following is an illustration of imperative code.\n",
+    "\n",
+    "\n",
+    "```css\n",
+    "x = 2\n",
+    "y = 3 \n",
+    "z = x * y\n",
+    "   \n",
+    "```\n",
+    "\n",
     "    \n",
-    "<div class=\"alert alert-block alert-info\"> Sample output:<br><br>\n",
-    "look at this nice rounding 12.1244</div>\n",
     "    \n",
+    "<a id=\"logical\"></a>\n",
+    "**Logical programming**, based on formal logic, is based on evaluating whether statements are true or false. The main differences from imperative programming, being the logical clauses which are given to the computer to evaluate. \n",
     "\n",
-    "# The <code>random</code> function\n",
-    "    \n",
-    "Lastly, we spoke about the <code>random</code> function. As <code>random</code> is not a built-in function of Python, the first thing you need to do in order to make use of it, is to import <code>numpy</code>. <code>random</code> is used, as indicated by the name, to generate pseudo-random numbers, on demand also according to different distributions such as the standard normal or others. There exists the possibility of seeding the RNG (*Random Numbers Generator*) to synchronise the outcome of the <code>random</code> function (see box).\n",
+    "```css\n",
+    "example with booleans\n",
+    "```\n",
+    "<a id=\"functional\"></a>\n",
+    "**Functional programming** is a paradigm which treats computation as the [evaluation of mathematical functions](https://en.wikipedia.org/wiki/Functional_programming) instead of progressively changing and mutating data. The following shows an example of a function of two inputs x and y, defined to multiply the first input x by y.\n",
     "\n",
-    "<div class=\"alert alert-block alert-info\"> \n",
-    "On the importance and meaning of seeding:\n",
-    "<br><br>\n",
-    "The random function in python does not generate actual random numbers - it generates *pseudo* - random numbers. What this means is that the computer performs operations on a given value to generate a number, the next number using the previously generated number. However, the first time you use the generator, there is no initial value. (Side remark: Since Python generates values at runtime, when you re-run the code, it will again lack an initial value!) Python works around this by using the current time on your computer as first value if you do not specify a seed. \n",
-    "<br><br>\n",
-    "*Seeding* a pseudo - random numbers generator gives it its first \"previous\" value. Each seed value will generate the same sequence of pseudo - random numbers on each machine. That is, if Arnau any you type in the same seed, you will get the same sequence of outcomes! More on this will be discussed in next week's lecture. \n",
-    "<br><br>\n",
-    "You can provide a seed through the command <code>random.seed()</code>\n",
-    "</div>\n",
-    "    \n",
-    "Now, to go back to the <code>random</code> function, the feature that we can most handily use when wanting to generate integers for our Three Queens Game is the function <code>random.randint()</code>. This can either be used by giving one parameter:\n",
-    "\n",
-    "<code>random.randint(b)</code> which will generate numbers from 0 to b-1.\n",
-    "\n",
-    "Alternatively, use two parameters to indicate the range: <code>random.randint(a, b)</code>. **Caution**: Unlike other instances where you indicate a range, here the upperbound <code>b</code> is included! This function generates numbers from <code>a</code> to <code>b</code>.\n",
-    "\n",
-    "For a more extensive and detailed description of <code>random</code>, consult the [Python Library](https://docs.python.org/3/library/random.html)  "
+    "```css\n",
+    "def multiply(x,y):\n",
+    "    z = x * y\n",
+    "    return z\n",
+    "multiply(3,6)\n",
+    "```\n",
+    "<a id=\"oop\"></a>\n",
+    "# **Object-Oriented programming**"
    ]
   },
   {
@@ -143,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
