--- a/02_Introduction_to_Programming.ipynb
+++ b/02_Introduction_to_Programming.ipynb
@@ -54,8 +54,6 @@
    "source": [
     "## Algorithms <a name=\"Algorithms\"></a>  \n",
     "\n",
-    "Now that we know what is Programming, we can understand what a Program is. A Program is a piece of code (a set of instructions for the computer to execute) that makes the computer solve our problem. Consequently, one can simply associate the term \"program\" with a programmer's work output.\n",
-    "\n",
     "An algorithm is a concrete set of rules used to solve a problem. From simple math like adding numbers to more complicated tasks like displaying content based on user input, an algorithm can be used to do just about anything. Algorithms are omnipresent in the programming world—they are a fundamental part of all programs; thus, every programmer needs to have a strong understanding of algorithms. \n",
     "\n",
     "### Creation of an Algorithm\n",
@@ -117,7 +115,18 @@
    "metadata": {},
    "source": [
     "## Divide & Conquer Principle <a name=\"Divide & Conquer Principle\"></a>\n",
-    "Now that we know what is Programming, we can understand what a Program is. A Program is a piece of code (a set of instructions for the computer to execute) that makes the computer solve our problem. Consequently, one can simply associate the term \"program\" with a programmer's work output.\n",
+    "\n",
+    "### **What is this Principle about?**\n",
+    "\n",
+    " The Divide & Conquer Principle is a versatile method applied universally to solve complex issues (Application fields include Politics and Military). The reason for this is because it is a great method to break down extremely complex issues to bite sized ones. Consequently, one can easily solve the big problem by finding solutions to the bite sized problems and then combining these answers to create a final solution. \n",
+    " \n",
+    " \n",
+    " The visual below summarises the above explanation of the Principle.\n",
+    " \n",
+    " \n",
+    " \n",
+    " ![alt text](https://www.studytonight.com/data-structures/images/divide-conquer.png)\n",
+    "\n",
     "\n",
     "\n",
     "### Application of the Principle to Coding\n",
@@ -172,6 +181,13 @@
     "# Call out the function using the user's list to give us the final answer\n",
     "\n",
     "maximum_number(list_of_numbers) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the earlier stage, translate your pseudocodes into a coding language that the computer understands (which in our case is Python). Translation of the simplest tasks  should be done first:"
    ]
   },
   {
