--- a/03_Values_Variables_and_Operators.ipynb
+++ b/03_Values_Variables_and_Operators.ipynb
@@ -4,50 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of contents\n",
-    "**!¡!¡ Missing**"
+    "# Tutorial 3 Variables, Values, Operators, Functions"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Types of values (Arnau)\n",
-    "We say that computers compute in **binary**, which is like counting in base of 2 and by chunk of 8\n",
+    "# Table of contents\n",
     "\n",
-    "example : \n",
+    "1. Variables\n",
+    "2. Values\n",
+    "3. Operators\n",
+    "4. Functions\n",
+    "5. Encryption and Decryption"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# How to use this Jupyter Notebook\n",
     "\n",
-    "<code>my_number = 1 => 00000001 in binary </code>\n",
-    "\n",
-    "<code>2 = 00000010 in binary </code>\n",
-    "\n",
-    "<code>3 = 00000011 in binary </code>\n",
-    "\n",
-    "## What is a variable?\n",
-    "A variable is a name that stores a value. Variables makes it easier for humans to understand and difference the values. If we tell python that n = 1, the computer will remember that n is equal to 1. This can also be used for storing lists or matrices. \n",
-    "\n",
-    "There are also simple rules we should follow when naming variables. Such as always only using lowercase, because some languages have differences between upper- and lowercase. The rest of the rules are in the class slides. \n",
-    "\n",
-    "## In python\n",
-    "### Boolean : True or False\n",
-    "example : \n",
-    "\n",
-    "<code>rainy_day = **True**</code>\n",
-    "    \n",
-    "### Integer : All whole numbers \n",
-    "    {....,-2,-1,0,1,2,...}\n",
-    "example : Integers are use for iterators variables usually, and for any discrete mathematics\n",
-    "\n",
-    "<code>my_integer = **1** </code>\n",
-    "    \n",
-    "### Float : All non-whole numbers like 3.145 or 0.01\n",
-    "example : For any decimal number\n",
-    "\n",
-    " <code>my_float = **3.145**</code>\n",
-    "### String : String of characters like \"Hello\"\n",
-    "example : For any string / text you want\n",
-    "\n",
-    " <code>my_string = **\"Hello\"**</code>"
+    "In this tutorial we cover the topics Variables, Values, Operators and Functions. THis Jupyter notebook features two types of cells, some containing text written in Markdown (such as this cell) and others containing code written in Python. The cells containing text explain the different topics, while the cells containing code allow you to use practical examples of the topics discussed. To do so, simply run a cell containing code, either by seleting the cell and then selecting from the main menu under the header *Cell* to *Run Cells*. Alternatively, you can select the cell you want to execute and press *Ctrl* + *Enter* on your keyboard. Also, you can change values for variables in the cells containing code to create different results."
    ]
   },
   {
@@ -309,13 +288,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# To use the other operator and to subset a string, we will create a variable called text containing the string \"Switzerland is small\" \n",
     "# We use the in-built function print() to generate output in Python\n",
@@ -466,9 +438,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "<class 'int'>\n",
+      "80\n",
+      "<class 'int'>\n",
+      "4.2\n",
+      "<class 'float'>\n",
+      "0.00042\n",
+      "<class 'float'>\n",
+      "(4+8j)\n",
+      "<class 'complex'>\n",
+      "5\n",
+      "(2, 5)\n",
+      "9\n",
+      "2\n",
+      "16\n",
+      "15\n",
+      "6\n",
+      "54.598150033144236\n",
+      "4\n",
+      "5.0106352940962555\n",
+      "2.0969100130080562\n",
+      "1.4142135623730951\n",
+      "-0.9880316240928618\n",
+      "-0.9843766433940419\n",
+      "0.5578517393521941\n"
+     ]
+    }
+   ],
    "source": [
     "# Integer numbers\n",
     "print(10)\n",
@@ -645,11 +649,33 @@
     "# The difference between lists and tuples becomes clearer, when we try to update the data contained therein\n",
     "\n",
     "new_list = [1, 2, 2, 4, 5]\n",
-    "new_tuple = (1, 2, 2, 4, 5)\n",
-    "new_list[2] = 3\n",
-    "new_tuple[2] = 3\n",
     "\n",
-    "# It is possible to update the list, but not the tuple. Tuples are read-only."
+    "new_tuple = (1, 2, 2, 4, 5)\n",
+    "\n",
+    "new_list[2] = 3\n",
+    "print(new_list)\n",
+    "\n",
+    "new_tuple[2] = 3\n",
+    "print(new_tuple)\n",
+    "\n",
+    "# It is possible to update the list, but not the tuple. Tuples are read-only.\n",
+    "# When running this cell, Python will display an error message, highlighting row 10\n",
+    "# Add a hashtag # symbol to row 10 and re-run the cell"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To update the tuple from the previous exercise, we need to recreate the whole tuple with the new values\n",
+    "\n",
+    "new_tuple = (1, 2, 2, 4, 5)\n",
+    "\n",
+    "new_tuple = (1, 2, 3, 4, 5)\n",
+    "\n",
+    "print(new_tuple)"
    ]
   },
   {
@@ -779,24 +805,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Operators (Arnau)\n",
-    "Mathematical and Conditional operators are used when you want to apply a mathematical operation on one or more variables.\n",
-    "Example : \n",
-    "- Add two variables together : x + y $$x+y$$\n",
-    "- Divide : x / y $$\\frac{x}{y}$$\n",
-    "- Multiply : x * y $$x*y$$\n",
-    "- Power : x ** y $$x^y$$\n",
-    "- Integer division : x // y\n",
-    "- Modulus : x%y\n",
-    "\n",
-    "Operators are functions that are already built in in python. Common operators are arithmetic (+ or -), comparison ( > ), logical operations (“and” or “or”), and assignments ( = ). \n",
-    "To find other built in functions use Google. It’s important to understand what the operators do and their input to prevent mistakes."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 3. Operators\n",
     "\n",
     "## 3.1. Types of Operators\n",
@@ -819,43 +827,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1\n",
+      "6\n",
+      "2.0\n",
+      "1\n",
+      "8\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "# You can run the code in this cell to perform some basic math in Python\n",
     "\n",
-    "1 + 1\n",
+    "print(1 + 1)\n",
     "\n",
-    "2 - 1\n",
+    "print(2 - 1)\n",
     "\n",
-    "2 * 3\n",
+    "print(2 * 3)\n",
     "\n",
-    "6 / 3\n",
+    "print(6 / 3)\n",
     "\n",
-    "7 % 3\n",
+    "print(7 % 3)\n",
     "\n",
-    "2 ** 3\n",
+    "print(2 ** 3)\n",
     "\n",
-    "9 // 2"
+    "print(9 // 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "10\n",
+      "26\n",
+      "125\n"
+     ]
+    }
+   ],
    "source": [
     "# It is also possible to combine these operators\n",
     "# We will cover below the precedence the operators take. Keep in mind that expressions within parentheses are executed first.\n",
     "\n",
-    "2 + 3 * 2\n",
+    "print(2 + 3 * 2)\n",
     "\n",
-    "(2 + 3) * 2\n",
+    "print((2 + 3) * 2)\n",
     "\n",
-    "5 ** 2 + 1\n",
+    "print(5 ** 2 + 1)\n",
     "\n",
-    "5 ** (2 + 1)"
+    "print(5 ** (2 + 1))"
    ]
   },
   {
@@ -870,7 +903,6 @@
     "|--------|-------------|---------|\n",
     "| == | Checks if values on either side are equal | 2 == 2 returns True |\n",
     "| != | Checks if values on either side are not equal | 2 != 3 returns True |\n",
-    "| <> | Also checks if values on either side are not equal | 2 <> 2 returns False |\n",
     "| > | Value on the left greater than value on the right | 5 > 2 returns True |\n",
     "| < | Value on the left smaller than value on the right | 5 < 2 returns False |\n",
     "| >= | Value on the left greater or equal to value on the right | 3 >= 2 returns True |\n",
@@ -879,25 +911,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# You can run the code in this cell to use Boolean operators in practise\n",
     "\n",
-    "2 == 2\n",
+    "print(2 == 2)\n",
     "\n",
-    "2 != 3\n",
+    "print(2 != 3)\n",
     "\n",
-    "2 <> 2\n",
+    "# print(2 <> 2)\n",
     "\n",
-    "5 > 2\n",
+    "print(5 > 2)\n",
     "\n",
-    "5 < 2\n",
+    "print(5 < 2)\n",
     "\n",
-    "3 >= 2\n",
+    "print(3 >= 2)\n",
     "\n",
-    "2 <= 2"
+    "print(2 <= 2)"
    ]
   },
   {
@@ -971,21 +1016,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "# You can run the code in this cell to use the logical operators\n",
     "\n",
     "a = 3\n",
     "\n",
-    "a < 4 and a > 2\n",
+    "print(a < 4 and a > 2)\n",
     "\n",
-    "b = 5\n",
-    "\n",
-    "b > 4 and not < 3\n",
-    "\n",
-    "a or b > 4"
+    "print(a < 4 or a < 2) # This statement returns True, since either condition can be fulfilled to return True"
    ]
   },
   {
@@ -1012,23 +1062,23 @@
     "\n",
     "list = [1, 3, 5, 7, 9]\n",
     "\n",
-    "1 in list\n",
+    "print(1 in list)\n",
     "\n",
-    "2 in list\n",
+    "print(2 in list)\n",
     "\n",
-    "3 in list\n",
+    "print(3 in list)\n",
     "\n",
-    "4 in list\n",
+    "print(4 in list)\n",
     "\n",
-    "5 in list\n",
+    "print(5 in list)\n",
     "\n",
-    "6 not in list\n",
+    "print(6 not in list)\n",
     "\n",
-    "7 not in list\n",
+    "print(7 not in list)\n",
     "\n",
-    "8 not in list\n",
+    "print(8 not in list)\n",
     "\n",
-    "9 not in list"
+    "print(9 not in list)"
    ]
   },
   {
@@ -1063,39 +1113,14 @@
     "\n",
     "e = 3\n",
     "\n",
-    "a is d\n",
+    "print(a is d)\n",
     "\n",
-    "a is b\n",
+    "print(a is b)\n",
     "\n",
-    "c is 2 * a\n",
+    "print(c is 2 * a)\n",
     "\n",
-    "b ** a is e ** d"
+    "print(b ** a is e ** d)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.1.7. Binary Operators\n",
-    "\n",
-    "Binary operators are also known as bitwise operators. They work on bits and perform operations bit by bit.\n",
-    "\n",
-    "| Symbol | Name | Description | Example |\n",
-    "|--------|-------------|---------|\n",
-    "| & | Binary AND | Operator copies a bit to the result if it exists in both operands | |\n",
-    "|  | Binary OR | It copies a bit if it exists in either operand | |\n",
-    "| ^ | Binary XOR | It copies the bit if it is set in one operand but not both | |\n",
-    "| ~ | Binary Ones Complement | It is unary and has the effect of 'flipping' bits. | |\n",
-    "| << | Binary Left Shift | | |\n",
-    "| >> | Binary Right Shift | | |"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1178,7 +1203,7 @@
    "source": [
     "A function is structured as follows: \n",
     "\n",
-    "The abbreviation <font color=green>def</font> stands for define. What comes after <font color=green>def</font> is the name of the function(<font color=blue>function_name</font>). In parantheses (<font color=green>input</font>) a parameter/placeholder is added for whatever value or variable will later on be plugged into the function. Then below this, the actual definition of the function follows which is referred to as <font color=red>\"documentation string\"</font>. The definition of the function is ended with <font color=green>return</font> which gives back the output of the function. "
+    "The abbreviation <font color=green>def</font> stands for define. What comes after <font color=green>def</font> is the name of the function(<font color=blue>function_name</font>). In parentheses (<font color=green>input</font>) a parameter/placeholder is added for whatever value or variable will later on be plugged into the function. Then below this, the actual definition of the function follows which is referred to as <font color=red>\"documentation string\"</font> or <font color=red>\"doc string\"</font> for short. The doc string is used to give a brief explanation of what the function does. This allows other users (or the same user, if using the function later one) to get a quick summary of a function's purpose. The definition of the function is ended with <font color=green>return</font> which gives back the output of the function."
    ]
   },
   {
@@ -1190,6 +1215,40 @@
     "def function_name(input):\n",
     "    \"documentation string\"\n",
     "    return (output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To look up the doc string of a function, enter the function name followed by ?\n",
+    "# The information will be displayed when you run the code in this cell\n",
+    "\n",
+    "function_name?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Another option is to use the built-in function help followed by the object in parentheses\n",
+    "\n",
+    "help(function_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# More complex functions require more documentation\n",
+    "\n",
+    "help(print)"
    ]
   },
   {
@@ -1206,6 +1265,7 @@
    "outputs": [],
    "source": [
     "def square_function(x):\n",
+    "    \"function that calculates the second power\"\n",
     "    result = x**2\n",
     "    return(result)"
    ]
