--- a/03_Values_Variables_and_Operators.ipynb
+++ b/03_Values_Variables_and_Operators.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Table of contents\n",
+    "## Table of contents\n",
     "\n",
     "1. Variables\n",
     "2. Values\n",
@@ -24,7 +24,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to use this Jupyter Notebook\n",
+    "## How to use this Jupyter Notebook\n",
     "\n",
     "In this tutorial we cover the topics Variables, Values, Operators and Functions. THis Jupyter notebook features two types of cells, some containing text written in Markdown (such as this cell) and others containing code written in Python. The cells containing text explain the different topics, while the cells containing code allow you to use practical examples of the topics discussed. To do so, simply run a cell containing code, either by seleting the cell and then selecting from the main menu under the header *Cell* to *Run Cells*. Alternatively, you can select the cell you want to execute and press *Ctrl* + *Enter* on your keyboard. Also, you can change values for variables in the cells containing code to create different results."
    ]
@@ -501,14 +501,6 @@
     "\n",
     "Integers are whole numbers, positive or negative, without decimals, of unlimited length such as: 2, 6, 2368, -78, -9746286.\n",
     "\n",
-    "If a base other than 10 is given, the following strings can be prepended to an integer value without changing its value type to indicate a base other than 10:\n",
-    "\n",
-    "| Prefix  | Interpretation  | Base  |\n",
-    "|---|---|---|\n",
-    "| 0b or 0B  | Binary  | 2  |\n",
-    "| 0o or 0O  | Octal  | 8  |\n",
-    "| 0x or 0X  | Hexadecimal  | 16  |\n",
-    "\n",
     "\n",
     "#### 2.1.2.2. Floats\n",
     "\n",
@@ -915,25 +907,15 @@
     "\n",
     "There are several built-in functions to perform this task which will return a new object representing the final (converted) value.\n",
     "\n",
-    "| Function | Description | Example |\n",
-    "|----------|-------------|---------|\n",
-    "| int(x [,base]) | Converts x to an integer, base specifies the base if x is a string | int(4.0) will return 4 |\n",
-    "| long(x [,base]) | Converts x to a long integer, base specifies the base if x is a string | |\n",
-    "| float(x) | Converts x to a floating-point number | float(4) could return 4.0??? |\n",
-    "| complex() | Creates a complex number | |\n",
-    "| str() | Converts to a string representation | |\n",
-    "| repr() | Converts to an expression string | |\n",
-    "| eval(str) | Evaluates a string and returns an object | |\n",
-    "| tuple(l) | Converts l to a tuple | |\n",
-    "| list (l) | Converts l to a list | |\n",
-    "| set(l) | Converts l to a set | |\n",
-    "| dict(t) | Creates a dictionary. t must be a sequence of (key, value) tuples | |\n",
-    "| frozenset(l) | Converts l to a frozen set | |\n",
-    "| chr(a) | Converts an integer to a character | chr(4) returns \"4\" |\n",
-    "| unichr(a) | Converts an integer to unicode character | |\n",
-    "| ord(a) | Converts a single character to its integer value | |\n",
-    "| hex(a) | Converts an integer to it hexadecimal string | |\n",
-    "| oct(a) | Converts an integer to an octal string | |"
+    "| Function | Description |\n",
+    "|----------|-------------|\n",
+    "| int(x) | Converts x to an integer |\n",
+    "| float(x) | Converts x to a floating-point number |\n",
+    "| complex() | Creates a complex number |\n",
+    "| str() | Converts to a string representation |\n",
+    "| tuple(l) | Converts l to a tuple |\n",
+    "| list (l) | Converts l to a list |\n",
+    "| dict(t) | Creates a dictionary. t must be a sequence of (key, value) tuples |"
    ]
   },
   {
